--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,30 @@
-# --- Настройки подключения ---
-PBX_HOST=192.168.1.100
-PBX_EXTENSION=102
-PBX_SECRET=1
-
-# --- API-ключи для Yandex и DeepSeek ---
-YANDEX_API_KEY=AQVNxmuVWDtg9Gva7tnHDBvpGueDVSXXXXXXXXXX
-YANDEX_FOLDER_ID=b1gvjpp8ttXXXXXXXXXX
-DEEPSEEK_API_KEY=sk-24d42d84de714ee3b65629XXXXXXXXXX
-
-# --- API-ключи для Telegram-ботов ---
-# Основной бот для уведомлений
-TELEGRAM_BOT_TOKEN=8101185619:AAFrwHtn5n2gLHR0y1G9M6al9XXXXXXXXXX
-TELEGRAM_CHAT_ID=-3310593560
-
-# Бот для мониторинга
-MONITORING_BOT_TOKEN=your_monitoring_bot_token_here
-AUTHORIZED_CHAT_ID=your_admin_chat_id_here  # Число (например, 123456789)
-AUTHORIZED_USERNAME=your_admin_username_here # Без @ (например, ivan_ivanov)
-
-# --- Пути ---
-RECORDINGS_DIR=/home/alni/ai_support/recordings
-LOG_FILE=/home/alni/ai_support/logs/app.log
-DB_PATH=/home/alni/ai_support/db/conversation_history.db
-
-# --- Настройки ARI ---
-ARI_BASE_URL=http://192.168.1.100:8088/ari
-ARI_WS_URL=ws://192.168.1.100:8088/ari/events?app=ai_support_ari&api_key=ai_ari_user:1
+# --- ARI ---
+ARI_HOST=192.168.1.100
+ARI_PORT=8088
 ARI_USER=ai_ari_user
 ARI_PASSWORD=1
 ARI_APP_NAME=ai_support_ari
-AST_RECORD_PATH=/var/spool/asterisk/recordings
-TRANSCRIPTS_DIR=/home/alni/repository/n-ai-sks/transcripts
 
+# можно не задавать, тогда соберётся автоматически:
+# ARI_BASE_URL=http://192.168.1.100:8088/ari
+# ARI_WS_URL=ws://192.168.1.100:8088/ari/events?app=ai_support_ari&api_key=ai_ari_user:1
 
-# --- Настройки AMI ---
-AMI_HOST=192.168.1.100
-AMI_PORT=5038
-AMI_USER=admin
-AMI_PASS=HvLUyHo6Zncg
-
-# --- Настройки кэша ---
-CACHE_SIZE=100
-
-
-# --- RTP / ExternalMedia ---
+# --- ExternalMedia / RTP ---
 UBUNTU_IP=192.168.1.2
-
-RTP_IN_PORT=9000
-RTP_OUT_PORT=9002
-
-RTP_FORMAT=slin
+RTP_PORT=4000
+RTP_FORMAT=ulaw
 RTP_SAMPLE_RATE=8000
-RTP_CHANNELS=1
 
-# --- ARI INTERNAL ---
-ARI_HOST=192.168.1.100
-ARI_PORT=8088
+# --- VAD ---
+RMS_SPEECH_THRESHOLD=200
+MIN_UTTERANCE_MS=800
+END_SILENCE_MS=700
 
-# --- BRIDGE ---
-ARI_BRIDGE_TYPE=mixing
+# --- Yandex ---
+YANDEX_API_KEY=YOUR_YANDEX_API_KEY
+YANDEX_FOLDER_ID=YOUR_YANDEX_FOLDER_ID
+
+# --- DeepSeek ---
+DEEPSEEK_API_KEY=YOUR_DEEPSEEK_API_KEY
+DEEPSEEK_BASE_URL=https://api.deepseek.com
+DEEPSEEK_MODEL=deepseek-chat
